--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,8 @@ jobs:
           key: ${{ github.ref }}
           path: .cache
       - run: pip install mkdocs-material 
+      - run: pip install mkdocs
+      - run: pip install mkdocs-material-extensions
+      - run: pip install mkdocs-minify-plugin
+      - run: pip install mkdocs-redirects
       - run: mkdocs gh-deploy --force
