--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
       - run: pip install mkdocs-material-extensions
       - run: pip install mkdocs-minify-plugin
       - run: pip install mkdocs-redirects
-      - run: pip installpymdown-extensions
+      - run: pip install pymdown-extensions
       - run: mkdocs gh-deploy --force
